# uwasm

./: .gitignore  Cargo.toml  LICENSE  README.md  run_esp32.bat  run_example.bat  rust-toolchain.toml  simple.wasm  test.bat
.cargo/: config.toml
.github/workflows/: rust.yml
app-example/: Cargo.toml
app-example/src/: main.rs
src/: main.rs
tests/: call_external.rs  call_print.rs  factorial.input  factorial.rs  hello_led.rs  multivalue.wasm  rust_debug_build.rs  simple.rs  simple_code.rs  sum_array.rs  sum_array.wasm  sum_array_rec.rs  sum_array_rec.wasm
uwasm/: Cargo.toml
uwasm-custom/: Cargo.toml
uwasm-custom/src/: main.rs
uwasm-perf/: Cargo.toml
uwasm-perf/src/: main.rs
uwasm-test/: Cargo.toml
uwasm-test/src/: main.rs
uwasm-uc/: Cargo.toml
uwasm-uc/src/: main.rs
uwasm/src/: interpreter.rs  lib.rs  main.rs  operand.rs  parser.rs  str.rs
